[package]
name = "winnow-learn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
csv-async = { version = "1.3.0", features = ["tokio"] }
futures = "0.3.31"
once_cell = "1.21.3"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util"] }
tokio-util = { version = "0.7.14", features = ["codec"] }
winnow = "0.7.6"
